--- a/index.html
+++ b/index.html
@@ -19,14 +19,9 @@
         </p>
     </nav>
 
-    <div class="container text-center ">
-        <div class="row mt-5">
-            <div class="col">
-                <p class="txt">Age</p>
-                <input type=" text" class=" input" id="Age" placeholder="">
-            </div>
-        </div>
-        <div class="row mt-5">
+    <div class="container text-center">
+        
+        <div class="row mt-7">
             <div class="col">
                 <p class="txt">Weight</p>
                 <input type=" text" class=" input" id="Weight" placeholder="">
@@ -43,7 +38,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <button class="btn-aqua">Calculate</button>
+                <button id="calc-btn" class="btn-aqua">Calculate</button>
                 <p id="bmi" class="mt-3 txt"> Your BMI is: 24</p>
                 <p id="bmi" class="mt-5 txt"> Your BMI is: Normal</p>
             </div>
@@ -61,7 +56,7 @@
 
 
 
-
+    <script src="./scripts/bmi-Calc.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
