--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         
         <div class="row mt-7">
             <div class="col">
-                <p class="txt">Weight</p>
-                <input type=" text" class=" input" id="Weight" placeholder="">
+                <p class="txt">Weight (lb)</p>
+                <input type=" text" class=" input" id="weight" placeholder="">
             </div>
         </div>
         <div class="row mt-5">
             <div class="col">
                 <p class="txt">Height</p>
                 <p><span class="mr-7 txt ">ft</span> <span class="txt">in</span></p>
-                <span><input type="text" class=" input input-small" id="Weight" placeholder="">
-                    <input type="text" class=" input input-small ml-5" id="Weight" placeholder="">
+                <span><input type="text" class=" input input-small" id="ft" placeholder="">
+                    <input type="text" class=" input input-small ml-5" id="in" placeholder="">
                 </span>
             </div>
         </div>
@@ -40,7 +40,7 @@
             <div class="col">
                 <button id="calc-btn" class="btn-aqua">Calculate</button>
                 <p id="bmi" class="mt-3 txt"> Your BMI is: 24</p>
-                <p id="bmi" class="mt-5 txt"> Your BMI is: Normal</p>
+                <p id="bmi-class" class="mt-5 txt"> Your BMI is: Normal</p>
             </div>
         </div>
 
