got rid of placeholder text

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div class="row">
             <div class="col">
                 <button id="calc-btn" class="btn-aqua">Calculate</button>
-                <p id="bmi" class="mt-3 txt"> Your BMI is: 24</p>
-                <p id="bmi-class" class="mt-5 txt"> Your BMI is: Normal</p>
+                <p id="bmi" class="mt-3 txt"></p>
+                <p id="bmi-class" class="mt-5 txt"></p>
             </div>
         </div>
 
