--- a/index.html
+++ b/index.html
@@ -20,21 +20,38 @@
     </nav>
 
     <div class="container text-center">
-        
-        <div class="row mt-7">
+        <div class="row mt-5">
             <div class="col">
-                <p class="txt">Weight (lb)</p>
+                <select class="form-select" id="units" aria-label="Unit Select">
+
+                    <option selected value="Imperial">Imperial</option>
+                    <option value="Metric">Metric</option>
+                </select>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col">
+                <p class="txt" id="weightLabel">Weight (lb)</p>
                 <input type=" text" class=" input" id="weight" placeholder="">
             </div>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-3">
             <div class="col">
-                <p class="txt">Height</p>
-                <p><span class="mr-7 txt ">ft</span> <span class="txt">in</span></p>
-                <span><input type="text" class=" input input-small" id="ft" placeholder="">
-                    <input type="text" class=" input input-small ml-5" id="in" placeholder="">
-                </span>
+                <div id="hi">
+                    <p class="txt">Height</p>
+                    <p><span class="mr-7 txt ">ft</span> <span class="txt">in</span></p>
+                    <span><input type="text" class=" input input-small" id="ft" placeholder="">
+                        <input type="text" class=" input input-small ml-5" id="in" placeholder="">
+                    </span>
+                </div>
+
+                <div id="hm">
+                    <p class="txt">Height(cm)</p>
+                    <input type=" text" class="input" id="heightCM" placeholder="">
+                </div>
+
             </div>
+
         </div>
         <div class="row">
             <div class="col">
